--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.scss
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.scss
@@ -31,6 +31,15 @@
   &__action {
     display: flex;
     justify-content: space-evenly;
+
+    &--btn-send-order {
+      
+    }
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .container__action--btn-send-order {
+    display: none;
+  }
+}
