--- a/src/app/pages/cloth-management/order-detail/order-detail.component.html
+++ b/src/app/pages/cloth-management/order-detail/order-detail.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-content-between">
-  <div class="card w-full m-1">
+<div class="container-card">
+  <div class="card--customer w-full m-1">
     <h1 class="font-bold">ข้อมูลผู้ใช้</h1>
     <div class="container__form">
       <div class="field">
@@ -71,7 +71,7 @@
       </div>
     </div>
   </div>
-  <div class="card w-full m-1">
+  <div class="card--employee w-full m-1">
     <h1 class="font-bold">ข้อมูลพนักงาน</h1>
     <div class="container__form">
       <div class="field">
@@ -102,7 +102,7 @@
       </div>
     </div>
   </div>
-  <div class="card w-full m-1">
+  <div class="card--sum w-full m-1">
     <h1 class="font-bold">สรุป</h1>
     <div class="container__summarize">
       <p>ผ้าทั้งหมด {{ totalCloths }} ตัว</p>
