--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
   <h1 class="mb-5">รายการรับผ้าวันนี้</h1>
   <p-table
     [value]="orders"
-    responsiveLayout="scroll"
+    responsiveLayout="stack"
     [rows]="10"
     styleClass="p-datatable-lg"
     [paginator]="true"
