--- a/src/app/pages/cloth-management/order-detail/order-detail.component.scss
+++ b/src/app/pages/cloth-management/order-detail/order-detail.component.scss
@@ -1,4 +1,7 @@
-.card {
+.card,
+.card--customer,
+.card--employee,
+.card--sum {
   background-color: #ffffff;
   border-radius: 0.4rem;
   padding: 2rem;
@@ -127,8 +130,8 @@
     & > p {
       font-size: large;
       font-weight: 400;
-       margin-top: .5rem;
-       margin-bottom: .5rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
   }
 
@@ -153,5 +156,22 @@
 .customer-item {
   & span:first-child {
     margin-right: 5rem;
+  }
+}
+
+.container-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 980px) {
+  .container-card {
+    flex-wrap: wrap;
+  }
+
+  .card--customer,
+  .card--employee,
+  .card--sum {
+    width: 100%;
   }
 }
