--- a/src/app/features/send-order/add-problem/add-problem.component.html
+++ b/src/app/features/send-order/add-problem/add-problem.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<loading *ngIf="loading"></loading><div class="container">
   <div class="field">
     <div class="field">
       <label class="block">ผ้ามีปัญหา</label>
