--- a/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
+++ b/src/app/features/send-order/confirm-order-sender/confirm-order-sender.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="clothes" responsiveLayout="scroll">
+<loading *ngIf="loading"></loading><p-table [value]="clothes" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th>รหัส</th>
