--- a/src/app/features/send-order/select-clothe/select-clothe.component.html
+++ b/src/app/features/send-order/select-clothe/select-clothe.component.html
@@ -1,4 +1,4 @@
-<p-pickList
+<loading *ngIf="loading"></loading><p-pickList
   [source]="sourceClothes"
   [target]="targetClothes"
   sourceHeader="รายการผ้าในระบบ"
