--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<loading *ngIf="loading"></loading><div class="container">
   <div>
     <label class="container__label">ข้อมูลพนักงาน</label>
     <button
