--- a/src/app/features/add-cloth/add-cloth.component.html
+++ b/src/app/features/add-cloth/add-cloth.component.html
@@ -1,3 +1,4 @@
+<loading *ngIf="loading"></loading>
 <div *ngIf="typeSelected" class="container">
   <div class="field">
     <label class="block">ชนิดผ้า</label>
