--- a/src/app/pages/cloth-management/order-detail/order-detail.component.html
+++ b/src/app/pages/cloth-management/order-detail/order-detail.component.html
@@ -1,3 +1,4 @@
+<loading *ngIf="loading"></loading>
 <div class="container-card">
   <div class="card--customer w-full m-1">
     <h1 class="font-bold">ข้อมูลผู้ใช้</h1>
