--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<loading *ngIf="loading"></loading><div class="container">
   <div>
     <label class="container__label">รายการชนิดเนื้อผ้า</label>
     <button
