--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,3 +1,4 @@
+<loading *ngIf="loading"></loading>
 <div class="card shadow-7">
   <h1 class="card__label-header">เข้าสู่ระบบ</h1>
   <div class="p-field">
