--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -1,4 +1,5 @@
-<loading *ngIf="loading"></loading><div class="container">
+<loading *ngIf="loading"></loading>
+<div class="container">
   <div>
     <label class="container__label">ข้อมูลพนักงาน</label>
     <button
@@ -59,6 +60,15 @@
             icon="fas fa-key"
             class="p-button-rounded p-button-raised p-button-help"
             (click)="onVisibleEditPassword(employee)"
+          ></button>
+          <button
+            *ngIf="authService.isRole() === 'ADMIN'"
+            pButton
+            pRipple
+            type="button"
+            icon="fas fa-sync"
+            class="p-button-rounded p-button-raised p-button-info"
+            (click)="onResetPassword(employee.id, employee.idCard)"
           ></button>
           <button
             *ngIf="
