--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
   <ul class="sidebar__menu">
     <li routerLink="./dashboard" routerLinkActive="active">
       <i class="fas fa-home sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">แดชบอร์ด</label>
+      ><label class="sidebar__menu--label">หน้าแรก</label>
     </li>
     <li routerLink="cloth-management" routerLinkActive="active">
       <i class="fas fa-shopping-basket sidebar__menu--icon"></i
