--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -1,4 +1,5 @@
-<loading *ngIf="loading"></loading><div class="container">
+<loading *ngIf="loading"></loading>
+<div class="container">
   <div>
     <label class="container__label">รายการประเภทผ้ามีปัญหา</label>
     <button
@@ -19,13 +20,15 @@
   >
     <ng-template pTemplate="header">
       <tr>
+        <th>ลำดับที่</th>
         <th>รหัส</th>
         <th>ประเภทผ้ามีปัญหา</th>
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-cloth>
+    <ng-template pTemplate="body" let-cloth let-index="rowIndex">
       <tr>
+        <td>{{ index + 1 }}</td>
         <td>{{ cloth.key }}</td>
         <td>{{ cloth.name }}</td>
         <td class="container__action">
