--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<loading *ngIf="loading"></loading><div class="container flex justify-content-around">
+<loading *ngIf="loading"></loading>
+<div class="container flex justify-content-around">
   <div class="card shadow-4">
     <h3>จำนวนผ้าที่รับมาทั้งหมด</h3>
     <h1 style="color: goldenrod">{{ orders.length }}</h1>
@@ -27,14 +28,16 @@
   >
     <ng-template pTemplate="header">
       <tr>
+        <th>ลำดับที่</th>
         <th>วันที่</th>
         <th>ลูกค้า</th>
         <th>สถานะ</th>
         <th>จำนวน</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-order>
+    <ng-template pTemplate="body" let-order let-index="rowIndex">
       <tr>
+        <td>{{ index + 1 }}</td>
         <td>{{ order.created_at | date }}</td>
         <td>{{ order.customer.firstName + " " + order.customer.lastName }}</td>
         <td>{{ order.status }}</td>
