--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -21,6 +21,7 @@
   >
     <ng-template pTemplate="header">
       <tr>
+        <th>ลำดับที่</th>
         <th>รหัส</th>
         <th>ชื่อ</th>
         <th>นามสกุล</th>
@@ -31,8 +32,9 @@
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-employee>
+    <ng-template pTemplate="body" let-employee let-index="rowIndex">
       <tr>
+        <td>{{ index + 1 }}</td>
         <td>{{ employee.key }}</td>
         <td>{{ employee.firstName }}</td>
         <td>{{ employee.lastName }}</td>
@@ -72,7 +74,10 @@
           ></button>
           <button
             *ngIf="
-              employee.role === 'SUB_ADMIN' || authService.isRole() === 'ADMIN'
+              (employee.role === 'SUB_ADMIN' ||
+                authService.isRole() !== 'ADMIN') &&
+              employee.key !== employeeLogin.key &&
+              employee.role !== 'ADMIN'
             "
             pButton
             pRipple
