--- a/src/app/pages/type-cloth-management/type-cloth-management.component.html
+++ b/src/app/pages/type-cloth-management/type-cloth-management.component.html
@@ -1,4 +1,5 @@
-<loading *ngIf="loading"></loading><div class="container">
+<loading *ngIf="loading"></loading>
+<div class="container">
   <div>
     <label class="container__label">ประเภทการใช้งานของผ้า</label>
     <button
@@ -19,13 +20,15 @@
   >
     <ng-template pTemplate="header">
       <tr>
+        <th>ลำดับที่</th>
         <th>รหัส</th>
         <th>ชื่อประเภทการใช้งาน</th>
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-cloth>
+    <ng-template pTemplate="body" let-cloth let-index="rowIndex">
       <tr>
+        <td>{{ index + 1 }}</td>
         <td>{{ cloth.key }}</td>
         <td>{{ cloth.name }}</td>
         <td class="container__action">
@@ -43,9 +46,7 @@
             pButton
             pRipple
             type="button"
-            [icon]="
-              'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')
-            "
+            [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
             (click)="onDelete(cloth.id, cloth.isDisable)"
           ></button>
