--- a/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
+++ b/src/app/pages/cloth-management/add-cloths/add-cloths.component.html
@@ -98,6 +98,7 @@
     pRipple
     label="เพิ่มรายการผ้า"
     icon="fas fa-plus"
+    style="font-size: larger;"
     class="p-button-raised p-button-success p-button-sm container__btn-add"
     (click)="newClothList()"
   ></button>
