--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.scss
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #ffffff;
   border-radius: .4rem;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
