--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -96,7 +96,10 @@
         </td>
         <td class="container__action">
           <button
-            *ngIf="authService.isRole() === 'ADMIN'"
+            *ngIf="
+              authService.isRole() === 'ADMIN' ||
+              employee.key == employeeLogin.key
+            "
             pButton
             pRipple
             type="button"
