--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -77,6 +77,7 @@
       class="p-button p-button-raised p-button-secondary"
       label="ออกรายงาน"
       icon="fas fa-print"
+      (click)="generatePdf()"
     ></button>
   </div>
 
