--- a/src/app/pages/cloth-management/add-cloths/add-cloths.component.scss
+++ b/src/app/pages/cloth-management/add-cloths/add-cloths.component.scss
@@ -5,6 +5,10 @@
   margin-left: 0.5rem;
 }
 
+label {
+  font-size: large;
+}
+
 .container {
   margin: auto;
   width: 50%;
@@ -25,7 +29,7 @@
   }
 
   &__label {
-    font-size: 2rem;
+    font-size: 2rem !important;
     font-weight: bold;
     align-self: flex-start;
   }
@@ -36,6 +40,10 @@
     align-self: flex-start;
     margin-left: 7rem;
     margin-bottom: 1rem;
+
+    & > label {
+      font-size: larger;
+    }
   }
 
   &__form {
