--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,11 +14,16 @@ html {
   // This defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
   font-family: "NotoSansThai-Regular", Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 body {
   box-sizing: border-box;
   // padding: 3rem;
+}
+
+td, th {
+  font-size: large;
 }
 
 //! Fonts
