--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
         <th>วันที่</th>
         <th>ลูกค้า</th>
         <th>สถานะ</th>
-        <th>จำนวน</th>
+        <th>จำนวนผ้าที่ยังไม่ได้ส่ง</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-order let-index="rowIndex">
