--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="container flex justify-content-around">
   <div class="card shadow-4">
     <h3>จำนวนผ้าที่รับมาทั้งหมด</h3>
-    <h1 style="color: goldenrod">{{ orders.length }}</h1>
+    <h1 style="color: goldenrod">{{ totalClothes }}</h1>
   </div>
   <div class="card shadow-4">
     <h3>จำนวนลูกค้าที่รับมาทั้งหมด</h3>
@@ -13,7 +13,7 @@
     <h1 style="color: red">{{ totalProblem }}</h1>
   </div>
   <div class="card shadow-4">
-    <h3>จำนวนผ้าที่เสร็จแล้ว</h3>
+    <h3>จำนวนผ้าที่เสร็จแล้วทั้งหมด</h3>
     <h1 style="color: rgb(13, 207, 13)">{{ totalSuccess }}</h1>
   </div>
 </div>
