--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -60,14 +60,18 @@
   header="เพิ่มชนิดเนื้อผ้า"
   [(visible)]="newTextureVisible"
   (onHide)="onResetValue()"
+  [style]="{ width: '50vw', height: '30vh' }"
 >
-  <div class="container-add-texture">
+  <div class="container-add-texture flex flex-column  justify-content-around">
     <div class="field">
-      <label for="texture-type" class="block">ชื่อชนิดเนื้อผ้า</label>
+      <label for="texture-type" class="block" [style]="{ 'font-size': '25px' }"
+        >ชื่อชนิดเนื้อผ้า</label
+      >
       <input
         id="texture-type"
         type="text"
         pInputText
+        class="p-inputtext-lg w-full"
         [(ngModel)]="newTextureValue"
         placeholder="โปรดระบุชนิดเนื้อผ้า"
       />
@@ -75,7 +79,7 @@
     <button
       pButton
       pRipple
-      class="p-button-success p-button-raised"
+      class="p-button-success p-button-raised p-button-lg"
       label="เพิ่ม"
       icon="fas fa-plus"
       style="width: 100%; margin-top: 1rem"
