--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     <h1 style="color: goldenrod">{{ totalCustomer }}</h1>
   </div>
   <div class="card shadow-4">
-    <h3>จำนวนผ้าที่มีปัญหาทั้งหมด</h3>
+    <h3>ออเดอร์ที่ค้างอยู่</h3>
     <h1 style="color: red">{{ totalProblem }}</h1>
   </div>
   <div class="card shadow-4">
